# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import playersRouter from "./players";
+import bankRouter from "./bank";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(playersRouter);
+router.use(bankRouter);
 
 export default router;
